@@ -1,6 +1,8 @@
 6.31_01
     - Turn on "use strict" where it was missing.
     - Fixed a minor duplication in manifypod_target().  [rt.cpan.org 22149]
+    - The build_man.t test would fail if your Perl is configured to not
+      generate man pages ($Config{installman3dir} is set to none).
 
 6.31  Mon Oct  9 16:54:47 PDT 2006
     - Update our META.yml to version 1.2 of the spec.
